--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,6 +26,11 @@
     <%= f.text_area :category %>
   </div>
 
+  <div class="field">
+    <%= f.label :keywords %>
+    <%= f.text_area :keywords %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
