add new js, create privacy policy page, change background-image for home search-box, update routes, update home page

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,7 +2,7 @@
     div.header-box {
         height:300px;
         border: solid 1px black;
-        background-image: image-url('IMG_9191-1212.jpg');
+        background-image: image-url('Millennial-dog-owner-beach.jpg');
         background-attachment: local;
         background-repeat: no-repeat;
         background-size: cover;
@@ -89,11 +89,4 @@
     footer div.col-xs-4 ul li {
         display:inline-block;
         padding:5px;
-    }
-    header div.logo {
-    background-image: image-url('Tino_Image_Logo.jpg');
-    background-position: 2px -20px;
-    background-attachment: center;
-    background-size: 146px 110px;
-    background-repeat: no-repeat;
     }
