create reviews, make functional (missing styling), add paperclip gem

--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -3,6 +3,5 @@
 
     <%= render 'form', review: @review %>
 
-    <%= link_to 'Show', @review %> |
-    <%= link_to 'Back', reviews_path %>
+    <%= link_to 'Back', post_path(@post) %>
 </div>
