--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,9 +1,24 @@
 <div class='container'>
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
       <%= devise_error_messages! %>
 
+      <div class="field">
+        <%= f.label :first_name %><br />
+        <%= f.text_field :first_name, autofocus: true %>
+      </div>
+    
+      <div class="field">
+        <%= f.label :last_name %><br />
+        <%= f.text_field :last_name, autofocus: true %>
+      </div>
+      
+      <div>
+        <%= f.label :date_of_birth %><br />
+        <%= f.date_select :date_of_birth, :start_year => 1800 %>
+      </div>
+    
       <div class="field">
         <%= f.label :email %><br />
         <%= f.email_field :email, autofocus: true %>
@@ -31,7 +46,12 @@
         <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
         <%= f.password_field :current_password, autocomplete: "off" %>
       </div>
-
+    
+      <div class="field">
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar %>
+      </div>
+    
       <div class="actions">
         <%= f.submit "Update" %>
       </div>
