--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,6 @@
       <strong>Title:</strong>
       <%= @post.title %>
     </p>
-
     <p>
       <strong>Body:</strong>
       <%= @post.body %>
@@ -13,7 +12,24 @@
       <strong>Category:</strong>
       <%= @post.category %>
     </p>
-
+    
+    <div class=''>
+    <%= link_to "Write Review", new_post_review_path(@post) %>
+    </div>
+    <div class='reviews'>
+        <% if @reviews.blank? %>
+            <h3> Be the first to write a review</h3>
+            <%= link_to "write a review", new_post_review_path(@post), class: "rev-button" %>
+        <% else %>
+             <% (@reviews).each do |review, user| %>
+              <div class='review'>
+                  <%= image_tag (@users.where(id: review.user_id).first).avatar.url(:thumb) %>
+                  <%= review.rating%>
+                  <%= review.comment %>
+              </div> 
+             <% end %>
+        <% end %>
+    </div>
     <%= link_to 'Edit', edit_post_path(@post) %> |
     <%= link_to 'Back', posts_path %>
 </div>
