--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -3,5 +3,5 @@
 
     <%= render 'form', review: @review %>
 
-    <%= link_to 'Back', reviews_path %>
+    <%= link_to 'Back', post_path(@post) %>
 </div>
