--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,9 +20,10 @@
         background: linear-gradient(to top right,#45106e 0,#8828ab 100%);
         border:groove 1px #45106e;
         color:#CFCFCF;
+        transition: 2s;
     }
     
-    div.search-box button.button-col-xs-10:focus, div.search-box button.button-col-xs-10.on {
+    div.search-box button.button-col-xs-10:focus, div.search-box button.button-col-xs-10.on, div.search-box button.button-col-xs-10:hover {
         background:#8828ab;
         background: linear-gradient(to top right,#5828ab 0,#c828ab 100%);
         color:#FFFFFF;
