--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,14 +1,11 @@
 <div class='container'>
-    <div class=''>
-        <%= form_tag search_posts_path, method: :get, class: "navbar-form", role: "search" do %>
+    <% if @posts.empty? %>
+    <div class='search-col-6'>
         <p>
-            <%= text_field_tag :search, params[:search], class: "search" %>
-            <%= submit_tag "Search", name: nil, class: "search" %>
+            Sorry but there was no result matching your search.
         </p>
-        <% end %>
     </div>
-    <h1>Posts</h1>
-
+    <% else %>
     <table>
       <thead>
         <tr>
@@ -18,7 +15,6 @@
           <th colspan="3"></th>
         </tr>
       </thead>
-
       <tbody>
         <% @posts.each do |post| %>
           <tr>
@@ -36,4 +32,5 @@
     <br>
 
     <%= link_to 'New Post', new_post_path %>
+    <% end %>
 </div>
