add google qpx api function to post controller(show) and view, add google_api gem, add http gem

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,6 +15,9 @@
     
     <div class=''>
     <%= link_to "Write Review", new_post_review_path(@post) %>
+        <pre>
+    <%= @response %>
+    </pre>
     </div>
     <div class='reviews'>
         <div class='review-col-12'>
