update contact(message), add http request to google QPX(not finished)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,7 @@
                     <%= link_to 'Blog', posts_path %>
                 </li>
                 <li class='nav-list'>
-                    <%= link_to 'Contact', '/pages/contact' %>
+                    <%= link_to 'Contact', contact_path %>
                 </li>
                 
                 <% if user_signed_in? %>
