--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,7 +30,7 @@
         outline:-webkit-focus-ring-color auto 5px;
     }
     
-    form button.submit {
+    form .submit {
         display:block;
         border-color: #d4a900 #aa8700 #aa8700; 
         border: 1px solid transparent;
@@ -43,6 +43,7 @@
         font-size:12px;
         font-weight:700;
         cursor:pointer;
+        width:57px;
     }
     
     form div.form-col-6 {
@@ -218,7 +219,46 @@
                 </form>
             </div>
             <div id='Hotels-search' class='active-search off'>
-                hotel search is under-construction
+                <%= form_tag posts_path, method: :GET, role: "search"  %>
+                    <div class='form-group'>
+                        
+                        <div class='form-col-6'>
+                            <%= label_tag 'coming_from', 'Coming From' %>
+                            <%= text_field_tag 'city', nil, placeholder: 'city or airport' %>
+                        </div>
+                        
+                        <div class='form-col-6'>
+                            <%= label_tag 'destination', 'Destination' %>
+                            <%= text_field_tag 'city', nil, placeholder: 'city or airport' %>
+                        </div>
+                        
+                        <div class='form-col-3'>
+                            <%= label_tag 'leaving', 'Leaving' %>
+                            <%= date_field_tag(:datetime_ida, Date.today) %>
+                        </div>
+                        
+                        <div class='form-col-3'>
+                            <%= label_tag 'returing', 'Returning' %>
+                            <%= date_field_tag(:datetime_ida, Date.today) %>
+                        </div>
+                        <div class='form-col-f'>
+                        
+                        </div>
+                        <div class='form-col-2'>
+                            <%= label_tag 'adult', 'Adult (18+)' %>             
+                            <%= select_tag "adult", options_for_select([ 1, 2, 3, 4, 5, 6], "1") %>
+                        </div>
+                        
+                        <div class='form-col-2'>
+                            <%= label_tag 'child', 'Child (0-17)' %>             
+                            <%= select_tag "child", options_for_select([ 0, 1, 2, 3, 4, 5, 6], "0") %>
+                        </div>
+                        <div class='form-col-xl-full'>
+                            <%= label_tag 'advanced_options', 'Advanced Search', class: 'l-small' %>
+                            <%= submit_tag 'Search', class: 'submit'%>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div id='Cars-search' class='active-search off'>
                 Car search is under-construction
