--- a/app/views/searches/_city_list.html.erb
+++ b/app/views/searches/_city_list.html.erb
@@ -1,3 +1,4 @@
+#Array Syntax
 <% @split.each do |x| %>
     <% if x === "USA" %>
     <%=x.strip%>
@@ -6,3 +7,21 @@
     "<%= x %>" => "<% else %><%=x.strip%>
     <% end %>
     <% end %>
+
+
+# CSV tainted code
+
+<% @split.each do |x| %>
+    <% if x === "USA" || x === "SPB" || x === "NAF"%>
+    <%=x.strip%>
+    <%elsif x.length === 3 && x === x.upcase %>"<br><%=i = i + 1%>|<%= x %>|<%else%><%=x%>|
+    <% end %>
+    <% end %>
+ 
+<datalist id='listid'>
+        <% @cities_code.sort.each do |key, value|%>
+       <option label='<%= key %>' value='<%= value %>'>
+        <% end %>
+           
+       ...
+    </datalist>
