--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -1,14 +1,10 @@
 <div class='container'>
-
-    <input type='text' name='city' list='listid'>
-    <datalist id='listid'>
-        <% @cities_code.sort.each do |key, value|%>
-       <option label='<%= key %>' value='<%= value %>'>
-        <% end %>
-           
-       ...
-    </datalist>
+    welcome to your search
+    (under construction)
+    <pre>
+    <%= @response %>
+    </pre>
+    <%= @arrive_city_ita %><br>
+    <%= @depart_city_ita %><br>
     
-
-
 </div>
