update search functionality

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -89,6 +89,8 @@
     section h3.col-m-3 {
         text-align:center;
         width:95%;
+        padding:10px;
+        margin-top:0px;
     }
     section h3.col-m-2 {
         text-align:left;
