--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -142,7 +142,7 @@
             <button class='button-col-xs-10 off' id='All-button-search' onclick="responsive_travel_search('All')">
                 All
             </button>
-            <div id='Flights-search' class='active-search off'>
+            <div id='Flights-search' class='active-search on'>
                <%= form_tag search_path, method: :GET, role: "search"  %>
                     <div class='form-group'>
                         
@@ -211,7 +211,6 @@
 <div class='section-container'>
     <section>
          <div class='container-no-bg'>
-             Main section content
              <h3 class='col-m-3'>
                 Recommended Flights
              </h3>
