--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -2,9 +2,11 @@
     welcome to your search
     (under construction)
     <pre>
+    <% if @response != "" %>
     <%= @response %>
+    <% end %>
     </pre>
-    <%= @arrive_city_ita %><br>
-    <%= @depart_city_ita %><br>
-    
+    "<%= @arrive_city_ita %>"<br>
+    "<%= @depart_city_ita %>"<br>
+    "<%= @search %>"<br>
 </div>
